# ic

./: README.md  fact.fl  fib.fl  prog.fl  treeSort.fl
compiler/: Cargo.toml  test.fl
compiler/src/: fl.rs  flchk.rs  ftoh.rs  ftoi.rs  hir.rs  htoi.rs  il.rs  itoc.rs  lexer.rs  loc.rs  main.rs  parser.rs  tc.rs  tir.rs  token.rs  ttoi.rs  ty.rs
examples/fl/: fact.fl  fib.fl  treeSort.fl  vec3.fl
runtime/: .clang-format  .gitignore  CMakeLists.txt
runtime/include/: common.h  lar.h  operators.h  value.h  world.h
runtime/source/: common.c  lar.c  main.c  operators.c  value.c  world.c
